...
    if (levelFiles.isEmpty) return;

    showOverlay(
      ctx,
      const DialogConfiguration(),
      builder: (c) => AlertDialog(
        title: const Text('Open Level'),
        content: SizedBox(
          width: 300,
          child: ListView.builder(
            shrinkWrap: true,
            itemCount: levelFiles.length,
            itemBuilder: (context, index) {
...
